# auto-nounify-server

./: README.md  main.py  pyproject.toml  requirements.txt
services/nounify/: main.py  requirements.txt
services/quota_mgmt/: main.py  pyproject.toml  requirements.txt
